--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
 
     /* Completeness */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "typeRoots": [
+    "../node_modules/@types",
+    "../@types"
+  ]
 }
